# huffman-trees

./: BinSearchTree.cpp  BinSearchTree.hpp  CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.hpp  PriorityQueue.cpp  PriorityQueue.hpp  README.md  Scanner.cpp  Scanner.hpp  TreeNode.hpp  huffman_part2  main.cpp  utils.hpp
input_output/: TheBells.freq  TheBells.tokens  TheBells.txt
